fix sentence spacing on mobile

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1168,6 +1168,27 @@
 
 					p {
 						color: _palette($p, fg);
+
+						@include breakpoint('<=xlarge') {
+							margin-right: 120px;
+							margin-left: 120px;
+						}
+
+						@include breakpoint('<=large') {
+							margin-right: 90px;
+							margin-left: 90px;
+						}
+
+						@include breakpoint('<=medium') {
+							margin-right: 60px;
+							margin-left: 60px;
+						}
+
+						@include breakpoint('<=small') {
+							margin-right: 0;
+							margin-left: 0;
+						}
+
 					}
 				}
 			}
